init commit to setup website

--- a/_pages/collection-archive.html
+++ b/_pages/collection-archive.html
@@ -10,7 +10,7 @@ author_profile: true
 
 {% for collection in site.collections %}
   {% unless collection.output == false or collection.label == "posts" %}
-    {% capture label %}{{ collection.label }}{% endcapture %}
+    {% capture label %}{{ collection.label | capitalize }}{% endcapture %}
     {% if label != written_label %}
       <h2 id="{{ label | slugify }}" class="archive__subtitle">{{ label }}</h2>
       {% capture written_label %}{{ label }}{% endcapture %}
