updated structure of certain pages

--- a/_pages/year-archive-academic.html
+++ b/_pages/year-archive-academic.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /year-archive-academic/
-title: "Academic Blog Posts"
+title: "ACADEMIC BLOG POSTS"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts/
