--- a/_pages/year-archive-literary.html
+++ b/_pages/year-archive-literary.html
@@ -1,7 +1,7 @@
 ---
 layout: archive
 permalink: /year-archive-literary/
-title: "Literary Blog Posts"
+title: "LITERARY BLOG POSTS"
 author_profile: true
 redirect_from:
   - /wordpress/blog-posts-literary/
